# certifi-linux

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  build.sh  certifi_linux.pth  pyproject.toml  renovate.json
.github/: install-python.sh
.github/workflows/: static-code-check.yml  test-certifi-linux.yml  test-linux-distros.yml  test-py-versions.yml
scripts/: print_cert_path.py
src/certifi_linux/: certifi_linux.py  patch_certifi.py
tests/: test_certifi_linux.py
